--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ a{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 1rem;
+    padding: .3rem 1rem;
 }
 .logo{
     display: flex;
@@ -61,7 +61,7 @@ a{
 }
 .input i {
     position: absolute;
-    top: 37px;
+    top: 27px;
     left: 80px;
     color: #656781;
 }
@@ -80,6 +80,7 @@ input[type="text"]:focus-visible {
     padding: 10px 30px;
     display: block;
     transition: .5s;
+    z-index: 999;
 }
 .menu-1 ul li a {
     display: flex;
@@ -99,7 +100,7 @@ input[type="text"]:focus-visible {
     border-radius: 7px;
     font-size: 11px;
     position: absolute;
-    top: 52px;
+    top: 55px;
     padding: 6px;
     font-weight: 600;
     display: none;
@@ -123,6 +124,7 @@ input[type="text"]:focus-visible {
     width: 100px;
     margin-right: 20px;
     transition: .5s;
+    cursor: pointer;
 }
 .shakil:hover a{
     background: #DBE7F2;
@@ -145,6 +147,7 @@ input[type="text"]:focus-visible {
 }
 .menu-2 ul li {
     text-align: center;
+    z-index: 999;
 }
 .menu-2 ul li a {
     display: flex;
@@ -195,4 +198,38 @@ i.fas.fa-users{
     position: absolute;
     left: 2px;
     top: 6px;
+}
+  /* ============================ */
+ /********* Header CSS ***********/
+/*==============================*/
+.banner-area{
+    background: linear-gradient(#433A29,#BCB9B2,#FFFFFF);
+}
+.banner {
+    background: url(../images/2.jpg) no-repeat scroll 0 0 / cover;
+    width: 100%;
+    height: 500px;
+    position: relative;
+}
+.camera {
+    display: flex;
+    border: 0.1rem solid #fff;
+    padding: .8rem 1.5rem;
+    width: 200px;
+    border-radius: 12px;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    background: #fff;
+    z-index: 1;
+    transition: .3s;
+}
+.camera:hover{
+    background: #ddd;
+}
+.camera i {
+    margin-right: 10px;
+}
+.camera p{
+    font-weight: 500;
 }
